Use Jekyll for DRYer code

--- a/work/acf/index.html
+++ b/work/acf/index.html
@@ -1,91 +1,30 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8"> 
-    <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Asian Christian Fellowship</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <div id="pulse"></div>
-        <a href="/" id="circle">
-          <span id="name">Chris Lee</span>
-          <span id="tagline">Design &amp; Code</span>
-        </a>
-      </div>
-    </header>
+---
+layout: default
+title: Chris Lee | Asian Christian Fellowship
+---
 
-    <!-- Main site content -->
-    <div id="content">
-      <div id="detail">
-        <div class="heading">
-          <h1>Asian Christian Fellowship</h1>
-          <p class="type">Website</p>
-        </div>
-        <div id="description">
-          <a href="http://acfpcc.org/" title="Asian Christian Fellowship">
-            <img src="0.png" class="bleed window" alt="Asian Christian Fellowship" style="margin-right: -220px; width: 500px;">
-          </a>
-          <p>Asian Christian Fellowship is a student organization at Carnegie Mellon University.</p>
-          <p>This site was designed as a hub for the organization, where newcomers can find out more information about it and members can read about upcoming events.</p>
+<div id="detail">
+  <div class="heading">
+    <h1>Asian Christian Fellowship</h1>
+    <p class="type">Website</p>
+  </div>
+  <div id="description">
+    <a href="http://acfpcc.org/" title="Asian Christian Fellowship">
+      <img src="0.png" class="bleed window" alt="Asian Christian Fellowship" style="margin-right: -220px; width: 500px;">
+    </a>
+    <p>Asian Christian Fellowship is a student organization at Carnegie Mellon University.</p>
+    <p>This site was designed as a hub for the organization, where newcomers can find out more information about it and members can read about upcoming events.</p>
 
-          <h2>Technology</h2>
-          <p>The site uses CSS3 and web fonts to a great degree, with minimal images. I also constructed a Tumblr blog theme for the announcements page to match the static content.</p>
+    <h2>Technology</h2>
+    <p>The site uses CSS3 and web fonts to a great degree, with minimal images. I also constructed a Tumblr blog theme for the announcements page to match the static content.</p>
 
-          <h2>Process</h2>
-          <p>With the exception of some minor polishing, the entire design and code process took a day. I spent the day passing iterations back and forth with the fellowship director, who wrote the content for the site.</p>
-          <h2>Roles</h2>
-          <div id="roles">
-            <div class="role design">Visual design</div>
-            <div class="role programming">Front-end development</div>
-          </div>
-          <a href="http://acfpcc.org/" class="deliverable">Visit the site</a>
-        </div>
-      </div>
+    <h2>Process</h2>
+    <p>With the exception of some minor polishing, the entire design and code process took a day. I spent the day passing iterations back and forth with the fellowship director, who wrote the content for the site.</p>
+    <h2>Roles</h2>
+    <div id="roles">
+      <div class="role design">Visual design</div>
+      <div class="role programming">Front-end development</div>
     </div>
-    <!-- End main site content -->
-
-  <footer>
-      <div id="heading">
-        <h1>About Me</h1>
-      </div>
-      <div id="info">
-        <img src="/photo.jpg" alt="Chris Lee">
-        <div id="description">
-          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I'm currently interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
-        </div>
-      </div>
-      <div id="links">
-        <ul>
-          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </ul></li>
-        </ul>
-      </div>
-      <div id="verse">
-        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
-      </div>
-    </footer>
-
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-19583432-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-  </body>
-</html>
+    <a href="http://acfpcc.org/" class="deliverable">Visit the site</a>
+  </div>
+</div>
