--- a/work/bonsai/index.html
+++ b/work/bonsai/index.html
@@ -1,96 +1,35 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8"> 
-    <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Bonsai</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <div id="pulse"></div>
-        <a href="/" id="circle">
-          <span id="name">Chris Lee</span>
-          <span id="tagline">Design &amp; Code</span>
-        </a>
-      </div>
-    </header>
+---
+layout: default
+title: Chris Lee | Bonsai
+---
 
-    <!-- Main site content -->
-    <div id="content">
-      <div id="detail">
-        <div class="heading">
-          <h1>Bonsai</h1>
-          <p class="type">Web App</p>
-        </div>
-        <div id="description">
-          <img src="0.png" alt="Bonsai" class="bleed window" style="margin-right: -240px">
-          <p>There are so many to-do list applications these days, but I haven't found one that really suits me.</p>
-          <p>My dream to-do list application has:</p>
-          <ul>
-            <li>Complete keyboard accessibility</li>
-            <li>Some sort of grouping functionality, allowing multiple separate lists</li>
-            <li>Due date support with smart interpretation of date strings ("Fri", "tom", "5/27", etc.) and sub-groups based around date ranges</li>
-            <li>Accessibility across devices</li>
-            <li>A simple, minimal interface that includes these things and not much else</li>
-          </ul>
-          <p>I found the first three points (especially keyboard support!) pretty well-supported in <a href="http://www.potionfactory.com/thehitlist/" target="_blank">The Hit List</a>, the closest I've found to my ideal to-do list. But besides being costly, it's still overkill for my use. So I built my own to-do list as a web application.</p>
-          <h2>Technology</h2>
-          <p>Bonsai was built with <a href="http://backbonejs.org/" target="_blank">Backbone.js</a>, which allows task data to be easily bonded to the elements displayed on the page. I also took advantage of <a href="http://www.datejs.com/" target="_blank">Datejs</a>, a JavaScript libary for interpreting date strings.</p>
-          </ul>
-          <h2>Roles</h2>
-          <div id="roles">
-            <div class="role design">Ideation &amp; vision</div>
-            <div class="role design">Visual design</div>
-            <div class="role design">Interaction design</div>
-            <div class="role programming">Front-end development</div>
-            <div class="role programming">Back-end development</div>
-          </div>
-        </div>
-      </div>
+<div id="detail">
+  <div class="heading">
+    <h1>Bonsai</h1>
+    <p class="type">Web App</p>
+  </div>
+  <div id="description">
+    <img src="0.png" alt="Bonsai" class="bleed window" style="margin-right: -240px">
+    <p>There are so many to-do list applications these days, but I haven't found one that really suits me.</p>
+    <p>My dream to-do list application has:</p>
+    <ul>
+      <li>Complete keyboard accessibility</li>
+      <li>Some sort of grouping functionality, allowing multiple separate lists</li>
+      <li>Due date support with smart interpretation of date strings ("Fri", "tom", "5/27", etc.) and sub-groups based around date ranges</li>
+      <li>Accessibility across devices</li>
+      <li>A simple, minimal interface that includes these things and not much else</li>
+    </ul>
+    <p>I found the first three points (especially keyboard support!) pretty well-supported in <a href="http://www.potionfactory.com/thehitlist/" target="_blank">The Hit List</a>, the closest I've found to my ideal to-do list. But besides being costly, it's still overkill for my use. So I built my own to-do list as a web application.</p>
+    <h2>Technology</h2>
+    <p>Bonsai was built with <a href="http://backbonejs.org/" target="_blank">Backbone.js</a>, which allows task data to be easily bonded to the elements displayed on the page. I also took advantage of <a href="http://www.datejs.com/" target="_blank">Datejs</a>, a JavaScript libary for interpreting date strings.</p>
+    </ul>
+    <h2>Roles</h2>
+    <div id="roles">
+      <div class="role design">Ideation &amp; vision</div>
+      <div class="role design">Visual design</div>
+      <div class="role design">Interaction design</div>
+      <div class="role programming">Front-end development</div>
+      <div class="role programming">Back-end development</div>
     </div>
-    <!-- End main site content -->
-
-  <footer>
-      <div id="heading">
-        <h1>About Me</h1>
-      </div>
-      <div id="info">
-        <img src="/photo.jpg" alt="Chris Lee">
-        <div id="description">
-          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I'm currently interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
-        </div>
-      </div>
-      <div id="links">
-        <ul>
-          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </ul></li>
-        </ul>
-      </div>
-      <div id="verse">
-        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
-      </div>
-    </footer>
-
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-19583432-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-  </body>
-</html>
+  </div>
+</div>
