--- a/work/snappy/index.html
+++ b/work/snappy/index.html
@@ -1,94 +1,33 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8"> 
-    <meta content="Interaction designer" name="description">
-    <title>Chris Lee</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <div id="pulse"></div>
-        <a href="/" id="circle">
-          <span id="name">Chris Lee</span>
-          <span id="tagline">Design &amp; Code</span>
-        </a>
-      </div>
-    </header>
+---
+layout: default
+title: Chris Lee | Snappy
+---
 
-    <!-- Main site content -->
-    <div id="content">
-      <div id="detail">
-        <div class="heading">
-          <h1>Snappy</h1>
-          <p class="type">Web App</p>
-        </div>
-        <div id="description">
-          <img src="0.png" alt="Snappy" class="bleed window" style="margin-right: -340px">
-          <p>Retro camera effects are hip. HTML5 is hip. So we combined them.</p>
-          <p>Apps like <a href="https://instagram.com/">Instagram</a> have repopularized classic camera effects, but these apps are typically limited to closed platforms like iOS and Android. So when the <a href="http://mozappshackday.eventbrite.com/" target="_blank">Mozilla Apps Hack Day 2012</a> challenged us to build open, cross-platforms web apps, a couple other Mozilla interns and I decided to build an <strong>Snappy</strong>, Instagram-inspired app. My teammates handled the graphics editing algorithms while I worked on the design and front-end of the app. We ended up completing the app in five hours and winning first place.</p>
-          <h2>Design</h2>
-          <p>Off the bat, I wanted to use arrange the photo-editing process as a few distinct steps to convey its simplicity. The layout went through many iterations, finally arriving at a main content area with a sidebar displaying the steps. The sidebar's color changes with each step to further demonstrate progress.</p>
-          <p>Fitting with the nature of a hackathon, I had to work around various technical limitations as they came up. For example, though we initially wanted to show each effect's result with a thumbnail preview, that feature ended up being infeasible, performance-wise, so I used a text-based list of tabs attached to the photo instead.</p>
-          <h2>Technology</h2>
-          <p>Snappy is a simple, client-side JavaScript app. I contributed to the code for front-end interactions, setting up events to trigger when the buttons were pressed or when the app moved to the next step.</p>
-          <p>During the hackathon, we didn't concentrate on code style much, so our code became one huge mess. After the fact, I organized and modularized it a bit. The code is <a href="https://github.com/cleercode/snappy" target="_blank">on GitHub</a>.</p>
-          </ul>
-          <h2>Team</h2>
-          <p><a href="http://paul.cx/" target="_blank">Paul Adenot</a>, Stephen Crane</p>
-          <h2>Roles</h2>
-          <div id="roles">
-            <div class="role design">Visual design</div>
-            <div class="role design">Interaction design</div>
-            <div class="role programming">Front-end development</div>
-          </div>
-          <a href="http://chrsl.net/snappy/" class="deliverable" target="_blank">Try the app</a>
-          <a href="https://github.com/cleercode/snappy" class="deliverable" target="_blank">Browse the source</a>
-        </div>
-      </div>
+<div id="detail">
+  <div class="heading">
+    <h1>Snappy</h1>
+    <p class="type">Web App</p>
+  </div>
+  <div id="description">
+    <img src="0.png" alt="Snappy" class="bleed window" style="margin-right: -340px">
+    <p>Retro camera effects are hip. HTML5 is hip. So we combined them.</p>
+    <p>Apps like <a href="https://instagram.com/">Instagram</a> have repopularized classic camera effects, but these apps are typically limited to closed platforms like iOS and Android. So when the <a href="http://mozappshackday.eventbrite.com/" target="_blank">Mozilla Apps Hack Day 2012</a> challenged us to build open, cross-platforms web apps, a couple other Mozilla interns and I decided to build an <strong>Snappy</strong>, Instagram-inspired app. My teammates handled the graphics editing algorithms while I worked on the design and front-end of the app. We ended up completing the app in five hours and winning first place.</p>
+    <h2>Design</h2>
+    <p>Off the bat, I wanted to use arrange the photo-editing process as a few distinct steps to convey its simplicity. The layout went through many iterations, finally arriving at a main content area with a sidebar displaying the steps. The sidebar's color changes with each step to further demonstrate progress.</p>
+    <p>Fitting with the nature of a hackathon, I had to work around various technical limitations as they came up. For example, though we initially wanted to show each effect's result with a thumbnail preview, that feature ended up being infeasible, performance-wise, so I used a text-based list of tabs attached to the photo instead.</p>
+    <h2>Technology</h2>
+    <p>Snappy is a simple, client-side JavaScript app. I contributed to the code for front-end interactions, setting up events to trigger when the buttons were pressed or when the app moved to the next step.</p>
+    <p>During the hackathon, we didn't concentrate on code style much, so our code became one huge mess. After the fact, I organized and modularized it a bit. The code is <a href="https://github.com/cleercode/snappy" target="_blank">on GitHub</a>.</p>
+    </ul>
+    <h2>Team</h2>
+    <p><a href="http://paul.cx/" target="_blank">Paul Adenot</a>, Stephen Crane</p>
+    <h2>Roles</h2>
+    <div id="roles">
+      <div class="role design">Visual design</div>
+      <div class="role design">Interaction design</div>
+      <div class="role programming">Front-end development</div>
     </div>
-    <!-- End main site content -->
-
-  <footer>
-      <div id="heading">
-        <h1>About Me</h1>
-      </div>
-      <div id="info">
-        <img src="/photo.jpg" alt="Chris Lee">
-        <div id="description">
-          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I'm currently interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
-        </div>
-      </div>
-      <div id="links">
-        <ul>
-          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </ul></li>
-        </ul>
-      </div>
-      <div id="verse">
-        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
-      </div>
-    </footer>
-
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-19583432-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-  </body>
-</html>
+    <a href="http://chrsl.net/snappy/" class="deliverable" target="_blank">Try the app</a>
+    <a href="https://github.com/cleercode/snappy" class="deliverable" target="_blank">Browse the source</a>
+  </div>
+</div>
