--- a/work/vote4/index.html
+++ b/work/vote4/index.html
@@ -1,91 +1,30 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8"> 
-    <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Vote 4</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <div id="pulse"></div>
-        <a href="/" id="circle">
-          <span id="name">Chris Lee</span>
-          <span id="tagline">Design &amp; Code</span>
-        </a>
-      </div>
-    </header>
+---
+layout: default
+title: Chris Lee | Vote 4
+---
 
-    <!-- Main site content -->
-    <div id="content">
-      <div id="detail">
-        <div class="heading">
-          <h1>Vote 4</h1>
-          <p class="type">Mobile</p>
-        </div>
-        <div id="description">
-          <img src="0.png" alt="Vote 4 poll screen" class="bleed">
-          <p>Ever had trouble deciding where to eat with your friends?</p>
-          <p><strong>Vote 4</strong> is a mobile app concept designed to solve that problem. Inspired by my indecisive group of friends, I worked on Vote 4 with a couple classmates for an mobile interaction design project. Our target demographic was groups of teenagers and young adults who have trouble picking eating destinations due to differing tastes or lack of strong opinions.</p>
-          <h2>Research</h2>
-          <p>We researched similar services such Yelp, Urbanspoon, and Foodspotting and found that while helpful for a single user trying to find a restaurant, they did not solve the <strong>group coordination</strong> problem that we were targetting.</p>
-          <h2>Design</h2>
-          <p>I suggested the use of a four photo tiles as the main screen to make the app feel simple yet visually engaging from the start. I led a whiteboard wireframe construction session based on this idea and then refined the results into paper wireframes, then digital wireframes, and finally digital mockups produced in Photoshop. We then used Keynote to construct an animated demo.</p>
-          <h2>Team</h2>
-          <p><a href="http://christianreyes.com/" target="_blank">Christian Reyes</a>, Stephanie Yim</p>
-          <h2>Roles</h2>
-          <div id="roles">
-            <div class="role design">Ideation</div>
-            <div class="role research">User research</div>
-            <div class="role design">Visual design</div>
-            <div class="role design">Interaction design</div>
-          </div>
-          <a href="presentation.pdf" class="deliverable" target="_blank">View the presentation</a>
-        </div>
-      </div>
+<div id="detail">
+  <div class="heading">
+    <h1>Vote 4</h1>
+    <p class="type">Mobile</p>
+  </div>
+  <div id="description">
+    <img src="0.png" alt="Vote 4 poll screen" class="bleed">
+    <p>Ever had trouble deciding where to eat with your friends?</p>
+    <p><strong>Vote 4</strong> is a mobile app concept designed to solve that problem. Inspired by my indecisive group of friends, I worked on Vote 4 with a couple classmates for an mobile interaction design project. Our target demographic was groups of teenagers and young adults who have trouble picking eating destinations due to differing tastes or lack of strong opinions.</p>
+    <h2>Research</h2>
+    <p>We researched similar services such Yelp, Urbanspoon, and Foodspotting and found that while helpful for a single user trying to find a restaurant, they did not solve the <strong>group coordination</strong> problem that we were targetting.</p>
+    <h2>Design</h2>
+    <p>I suggested the use of a four photo tiles as the main screen to make the app feel simple yet visually engaging from the start. I led a whiteboard wireframe construction session based on this idea and then refined the results into paper wireframes, then digital wireframes, and finally digital mockups produced in Photoshop. We then used Keynote to construct an animated demo.</p>
+    <h2>Team</h2>
+    <p><a href="http://christianreyes.com/" target="_blank">Christian Reyes</a>, Stephanie Yim</p>
+    <h2>Roles</h2>
+    <div id="roles">
+      <div class="role design">Ideation</div>
+      <div class="role research">User research</div>
+      <div class="role design">Visual design</div>
+      <div class="role design">Interaction design</div>
     </div>
-    <!-- End main site content -->
-
-  <footer>
-      <div id="heading">
-        <h1>About Me</h1>
-      </div>
-      <div id="info">
-        <img src="/photo.jpg" alt="Chris Lee">
-        <div id="description">
-          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I'm currently interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
-        </div>
-      </div>
-      <div id="links">
-        <ul>
-          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </ul></li>
-        </ul>
-      </div>
-      <div id="verse">
-        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
-      </div>
-    </footer>
-
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-19583432-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-  </body>
-</html>
+    <a href="presentation.pdf" class="deliverable" target="_blank">View the presentation</a>
+  </div>
+</div>
