--- a/index.html
+++ b/index.html
@@ -1,244 +1,200 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8"> 
-    <meta content="Interaction designer" name="description">
-    <title>Chris Lee</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold,italic|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <div id="pulse"></div>
-        <a href="/" id="circle">
-          <span id="name">Chris Lee</span>
-          <span id="tagline">Design &amp; Code</span>
-        </a>
-      </div>
-    </header>
+---
+layout: default
+title: Chris Lee
+---
 
-    <!-- Main site content -->
-    <div id="content">
-      <div id="current">
-        <div class="item">
-          <div class="cover">
-            <div class="buttons double">
-              <a href="/work/snappy/" class="info"><div class="icon"></div>Info</a>
-              <a href="http://chrsl.net/snappy/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Snappy</h1>
-            <p class="type">Web App</p>
-          </div>
-          <img src="/work/snappy/thumb.png" alt="Snappy" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons double">
-              <a href="/work/gospel/" class="info"><div class="icon"></div>Info</a>
-              <a href="http://chrsl.net/gospel/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>The Gospel</h1>
-            <p class="type">Website</p>
-          </div>
-          <img src="/work/gospel/thumb.png" alt="The Gospel" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons double">
-              <a href="/work/designforprogrammers/" class="info"><div class="icon"></div>Info</a>
-              <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Design for Programmers</h1>
-            <p class="type">Presentation</p>
-          </div>
-          <img src="/work/designforprogrammers/thumb.png" alt="Design for Programmers" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons double">
-              <a href="/work/coursel/" class="info"><div class="icon"></div>Info</a>
-              <a href="http://coursel.net/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Coursel</h1>
-            <p class="type">Web App</p>
-          </div>
-          <img src="/work/coursel/thumb.png" alt="Coursel" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/grapevin/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Grapevin</h1>
-            <p class="type">Web app</p>
-          </div>
-          <img src="/work/grapevin/thumb.png" alt="Grapevin" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons double">
-              <a href="/work/stik/" class="info"><div class="icon"></div>Info</a>
-              <a href="http://www.stik.com/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Stik.com</h1>
-            <p class="type">Web App</p>
-          </div>
-          <img src="/work/stik/thumb.png" alt="Stik" />
-        </div>
-      </div>
-      <div id="secondary">
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/vote4/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Vote 4</h1>
-            <p class="type">Mobile App</p>
-          </div>
-          <img src="/work/vote4/thumb.png" alt="Vote 4" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/bonsai/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Bonsai</h1>
-            <p class="type">Web App</p>
-          </div>
-          <img src="/work/bonsai/thumb.png" alt="Bonsai" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons double">
-              <a href="/work/acf/" class="info"><div class="icon"></div>Info</a>
-              <a href="http://acfpcc.org/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>ACF</h1>
-            <p class="type">Website</p>
-          </div>
-          <img src="/work/acf/thumb.png" alt="Asian Christian Fellowship" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/tripi/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Tripi</h1>
-            <p class="type">Web App</p>
-          </div>
-          <img src="/work/tripi/thumb.png" alt="Tripi" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/shelf/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Shelf</h1>
-            <p class="type">Web App</p>
-          </div>
-          <img src="/work/shelf/thumb.png" alt="Shelf" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/waypoint/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Waypoint</h1>
-            <p class="type">Device</p>
-          </div>
-          <img src="/work/waypoint/thumb.png" alt="Waypoint" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/hcii/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>HCI Institute</h1>
-            <p class="type">Website</p>
-          </div>
-          <img src="/work/hcii/thumb.png" alt="HCI Institute" />
-        </div>
-        <div class="item">
-          <div class="cover">
-            <div class="buttons">
-              <a href="/work/symphony/" class="info"><div class="icon"></div>Info</a>
-            </div>
-          </div>
-          <div class="heading">
-            <h1>Symphony</h1>
-            <p class="type">Web App</p>
-          </div>
-          <img src="/work/symphony/thumb.png" alt="Symphony" />
-        </div>
+<!-- Primary Items -->
+<div id="primary">
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons double">
+        <a href="/work/snappy/" class="info"><div class="icon"></div>Info</a>
+        <a href="http://chrsl.net/snappy/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
       </div>
     </div>
-    <!-- End main site content -->
+    <div class="heading">
+      <h1>Snappy</h1>
+      <p class="type">Web App</p>
+    </div>
+    <img src="/work/snappy/thumb.png" alt="Snappy" />
+  </div>
 
-    <footer>
-      <div id="heading">
-        <h1>About Me</h1>
+  <div class="item">
+    <div class="cover">
+      <div class="buttons double">
+        <a href="/work/gospel/" class="info"><div class="icon"></div>Info</a>
+        <a href="http://chrsl.net/gospel/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
       </div>
-      <div id="info">
-        <img src="/photo.jpg" alt="Chris Lee">
-        <div id="description">
-          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I'm currently interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
-        </div>
-      </div>
-      <div id="links">
-        <ul>
-          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </ul></li>
-        </ul>
-      </div>
-      <div id="verse">
-        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
-      </div>
-    </footer>
+    </div>
+    <div class="heading">
+      <h1>The Gospel</h1>
+      <p class="type">Website</p>
+    </div>
+    <img src="/work/gospel/thumb.png" alt="The Gospel" />
+  </div>
 
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-19583432-1']);
-      _gaq.push(['_trackPageview']);
+  <div class="item">
+    <div class="cover">
+      <div class="buttons double">
+        <a href="/work/designforprogrammers/" class="info"><div class="icon"></div>Info</a>
+        <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Design for Programmers</h1>
+      <p class="type">Presentation</p>
+    </div>
+    <img src="/work/designforprogrammers/thumb.png" alt="Design for Programmers" />
+  </div>
 
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-  </body>
-</html>
+  <div class="item">
+    <div class="cover">
+      <div class="buttons double">
+        <a href="/work/coursel/" class="info"><div class="icon"></div>Info</a>
+        <a href="http://coursel.net/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Coursel</h1>
+      <p class="type">Web App</p>
+    </div>
+    <img src="/work/coursel/thumb.png" alt="Coursel" />
+  </div>
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/grapevin/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Grapevin</h1>
+      <p class="type">Web app</p>
+    </div>
+    <img src="/work/grapevin/thumb.png" alt="Grapevin" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons double">
+        <a href="/work/stik/" class="info"><div class="icon"></div>Info</a>
+        <a href="http://www.stik.com/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Stik.com</h1>
+      <p class="type">Web App</p>
+    </div>
+    <img src="/work/stik/thumb.png" alt="Stik" />
+  </div>
+
+</div>
+
+<!-- Secondary Items -->
+<div id="secondary">
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/vote4/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Vote 4</h1>
+      <p class="type">Mobile App</p>
+    </div>
+    <img src="/work/vote4/thumb.png" alt="Vote 4" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/bonsai/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Bonsai</h1>
+      <p class="type">Web App</p>
+    </div>
+    <img src="/work/bonsai/thumb.png" alt="Bonsai" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons double">
+        <a href="/work/acf/" class="info"><div class="icon"></div>Info</a>
+        <a href="http://acfpcc.org/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>ACF</h1>
+      <p class="type">Website</p>
+    </div>
+    <img src="/work/acf/thumb.png" alt="Asian Christian Fellowship" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/tripi/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Tripi</h1>
+      <p class="type">Web App</p>
+    </div>
+    <img src="/work/tripi/thumb.png" alt="Tripi" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/shelf/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Shelf</h1>
+      <p class="type">Web App</p>
+    </div>
+    <img src="/work/shelf/thumb.png" alt="Shelf" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/waypoint/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Waypoint</h1>
+      <p class="type">Device</p>
+    </div>
+    <img src="/work/waypoint/thumb.png" alt="Waypoint" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/hcii/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>HCI Institute</h1>
+      <p class="type">Website</p>
+    </div>
+    <img src="/work/hcii/thumb.png" alt="HCI Institute" />
+  </div>
+
+  <div class="item">
+    <div class="cover">
+      <div class="buttons">
+        <a href="/work/symphony/" class="info"><div class="icon"></div>Info</a>
+      </div>
+    </div>
+    <div class="heading">
+      <h1>Symphony</h1>
+      <p class="type">Web App</p>
+    </div>
+    <img src="/work/symphony/thumb.png" alt="Symphony" />
+  </div>
+</div>
