--- a/work/coursel/index.html
+++ b/work/coursel/index.html
@@ -1,104 +1,43 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8"> 
-    <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Coursel</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <div id="pulse"></div>
-        <a href="/" id="circle">
-          <span id="name">Chris Lee</span>
-          <span id="tagline">Design &amp; Code</span>
-        </a>
-      </div>
-    </header>
+---
+layout: default
+title: Chris Lee | Coursel
+---
 
-    <!-- Main site content -->
-    <div id="content">
-      <div id="detail">
-        <div class="heading">
-          <h1>Coursel</h1>
-          <p class="type">Web App</p>
-        </div>
-        <div id="description">
-          <a href="http://coursel.net/" title="Coursel">
-            <img src="0.png" class="bleed window" alt="Coursel">
-          </a>
-          <p>&ldquo;What GPA would I have if I...?&rdquo;</p>
-          <p>As a student at Carnegie Mellon University, I've realized two things:</p>
-          <ol>
-            <li>Students often want to figure out what grade point average they'd have ahead of time</li>
-            <li>Carnegie Mellon's GPA system can be pretty confusing</li>
-          </ol>
-          <p>Our grading system, like those of many universities, is based around different unit counts assigned to courses, which decide how much a student's course grades factor into his or her overall GPA. It's a simple calculation but can be confusing at first. And even after learning how the grading system works, calculating a GPA can feel unnecessarily tedious.</p>
-          <p>These frustrations helped me realize that the grade calculation process could be greatly automated, and I set out to do just that with <strong>Coursel</strong>.</p>
-          <h2>Design</h2>
-          <p>Because of its relatively niche market, Coursel was the perfect opportunity to take risks and experiment with design and development techniques. I took it as an opportunity to practice minimalistic design. I used a color pallette largely consisting of low-contrast grays with red accents to highlight important information.</p>
-          <p>On the interaction side of things, I designed Coursel to require a minimal amount of work to complete common tasks involved in GPA calculation. For example, a common desire for students calculating their GPA is to recalculate it with one course grade changed. Coursel allows that in one click: users can simply click on a new course grade and their GPA is recalculated automatically.</p>
-          <h2>Technology</h2>
-          <p>I also took Coursel as an initial opportunity to learn how to use <a href="http://backbonejs.org/" target="_blank">Backbone.js</a>, a system for structuring front-end JavaScript code. Backbone was helpful because it allows visible elements on the page to be linked to data. When the user changes their course info through the interface, the respective data is updated and a new GPA is calculated and displayed.</p>
-          <p>I used <a href="http://en.wikipedia.org/wiki/Web_storage" target="_blank">HTML5 localStorage</a> to store data about the user's courses locally in their browser. Using this method to store data instead of a traditional server was a conscious decision to protect user privacy; I'm sure many students wouldn't be comfortable saving their grades to a server.</p></p>
-          <p>After I learned how to use Node.js, I wrote a separate parser for a messy, gigantic HTML spreadsheet of all of Carnegie Mellon's courses in order to create a collect data on the number of units each course is assigned. Node.js made this particularly easy since I could use jQuery to traverse the HTML. In the end, I was able to produce a JSON file that Coursel uses to automatically assign the number of units to a course. Users can click on the unit count (or the course number) to manually change it as well. I thought this work was worth it to refine Coursel and make the process of calculating a GPA just that much more automated.</p>
-          <p>I also played around with other technologies like <a href="http://isotope.metafizzy.co/" target="_blank">Isotope</a> to create dynamically positioned tiles to represent courses and <a href="http://coffeescript.org/" target="_blank">CoffeeScript</a> to simplify JavaScript syntax.
-          <p>Coursel's <a href="https://github.com/cleercode/coursel" target="_blank">source</a> is available on GitHub.</p>
-          <h2>Roles</h2>
-          <div id="roles">
-            <div class="role design">Ideation &amp; vision</div>
-            <div class="role design">Visual design</div>
-            <div class="role design">Interaction design</div>
-            <div class="role programming">Front-end development</div>
-            <div class="role programming">Back-end development</div>
-          </div>
-          <a href="http://coursel.net/" class="deliverable" target="_blank">Try the app</a>
-          <a href="https://github.com/cleercode/coursel" class="deliverable" target="_blank">Browse the source</a>
-        </div>
-      </div>
+<div id="detail">
+  <div class="heading">
+    <h1>Coursel</h1>
+    <p class="type">Web App</p>
+  </div>
+  <div id="description">
+    <a href="http://coursel.net/" title="Coursel">
+      <img src="0.png" class="bleed window" alt="Coursel">
+    </a>
+    <p>&ldquo;What GPA would I have if I...?&rdquo;</p>
+    <p>As a student at Carnegie Mellon University, I've realized two things:</p>
+    <ol>
+      <li>Students often want to figure out what grade point average they'd have ahead of time</li>
+      <li>Carnegie Mellon's GPA system can be pretty confusing</li>
+    </ol>
+    <p>Our grading system, like those of many universities, is based around different unit counts assigned to courses, which decide how much a student's course grades factor into his or her overall GPA. It's a simple calculation but can be confusing at first. And even after learning how the grading system works, calculating a GPA can feel unnecessarily tedious.</p>
+    <p>These frustrations helped me realize that the grade calculation process could be greatly automated, and I set out to do just that with <strong>Coursel</strong>.</p>
+    <h2>Design</h2>
+    <p>Because of its relatively niche market, Coursel was the perfect opportunity to take risks and experiment with design and development techniques. I took it as an opportunity to practice minimalistic design. I used a color pallette largely consisting of low-contrast grays with red accents to highlight important information.</p>
+    <p>On the interaction side of things, I designed Coursel to require a minimal amount of work to complete common tasks involved in GPA calculation. For example, a common desire for students calculating their GPA is to recalculate it with one course grade changed. Coursel allows that in one click: users can simply click on a new course grade and their GPA is recalculated automatically.</p>
+    <h2>Technology</h2>
+    <p>I also took Coursel as an initial opportunity to learn how to use <a href="http://backbonejs.org/" target="_blank">Backbone.js</a>, a system for structuring front-end JavaScript code. Backbone was helpful because it allows visible elements on the page to be linked to data. When the user changes their course info through the interface, the respective data is updated and a new GPA is calculated and displayed.</p>
+    <p>I used <a href="http://en.wikipedia.org/wiki/Web_storage" target="_blank">HTML5 localStorage</a> to store data about the user's courses locally in their browser. Using this method to store data instead of a traditional server was a conscious decision to protect user privacy; I'm sure many students wouldn't be comfortable saving their grades to a server.</p></p>
+    <p>After I learned how to use Node.js, I wrote a separate parser for a messy, gigantic HTML spreadsheet of all of Carnegie Mellon's courses in order to create a collect data on the number of units each course is assigned. Node.js made this particularly easy since I could use jQuery to traverse the HTML. In the end, I was able to produce a JSON file that Coursel uses to automatically assign the number of units to a course. Users can click on the unit count (or the course number) to manually change it as well. I thought this work was worth it to refine Coursel and make the process of calculating a GPA just that much more automated.</p>
+    <p>I also played around with other technologies like <a href="http://isotope.metafizzy.co/" target="_blank">Isotope</a> to create dynamically positioned tiles to represent courses and <a href="http://coffeescript.org/" target="_blank">CoffeeScript</a> to simplify JavaScript syntax.
+    <p>Coursel's <a href="https://github.com/cleercode/coursel" target="_blank">source</a> is available on GitHub.</p>
+    <h2>Roles</h2>
+    <div id="roles">
+      <div class="role design">Ideation &amp; vision</div>
+      <div class="role design">Visual design</div>
+      <div class="role design">Interaction design</div>
+      <div class="role programming">Front-end development</div>
+      <div class="role programming">Back-end development</div>
     </div>
-    <!-- End main site content -->
-
-  <footer>
-      <div id="heading">
-        <h1>About Me</h1>
-      </div>
-      <div id="info">
-        <img src="/photo.jpg" alt="Chris Lee">
-        <div id="description">
-          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I'm currently interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
-        </div>
-      </div>
-      <div id="links">
-        <ul>
-          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </ul></li>
-        </ul>
-      </div>
-      <div id="verse">
-        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
-      </div>
-    </footer>
-
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-19583432-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-  </body>
-</html>
+    <a href="http://coursel.net/" class="deliverable" target="_blank">Try the app</a>
+    <a href="https://github.com/cleercode/coursel" class="deliverable" target="_blank">Browse the source</a>
+  </div>
+</div>
