--- a/work/symphony/index.html
+++ b/work/symphony/index.html
@@ -1,89 +1,28 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8"> 
-    <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Symphony</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <div id="logo">
-        <div id="pulse"></div>
-        <a href="/" id="circle">
-          <span id="name">Chris Lee</span>
-          <span id="tagline">Design &amp; Code</span>
-        </a>
-      </div>
-    </header>
+---
+layout: default
+title: Chris Lee | Symphony
+---
 
-    <!-- Main site content -->
-    <div id="content">
-      <div id="detail">
-        <div class="heading">
-          <h1>Symphony</h1>
-          <p class="type">Web App</p>
-        </div>
-        <div id="description">
-          <img src="0.png" alt="Symphony" class="bleed window" style="margin-right: -300px; width: 700px">
-          <p>Discovering new music should be easy.</p>
-          <p>Tell <strong>Symphony</strong> about a musician you like and it'll suggest others. I worked on Symphony for the 24-hour <a href="http://developer.yahoo.com/hacku/" target="_blank">Yahoo! Hack U</a> 2009 hackathon. Symphony was both my first ever web app project, and it ignited my interest in web development. It was also a solo project, so it presented many challenges and lessons.</p>
-          <h2>Technology</h2>
-          <p>Symphony uses the <a href="http://www.last.fm" target="_blank">last.fm</a> API to gather data about related artists. Working on Symphony was my first time using JavaScript and jQuery, and I learned the basics on the spot for the hackathon.</p>
-          <h2>Design</h2>
-          <p>Symphony presents musicians in a tiled photo view. Clicking on a tile opens more detailed information about the musician in a modal windows. This information includes a biography and larger image. I also originally intended to display information like YouTube videos and Flickr photos but ran out of time.</p>
-          <h2>Roles</h2>
-          <div id="roles">
-            <div class="role design">Ideation &amp; vision</div>
-            <div class="role design">Visual design</div>
-            <div class="role design">Interaction design</div>
-            <div class="role programming">Front-end development</div>
-            <div class="role programming">Back-end development</div>
-          </div>
-        </div>
-      </div>
+<div id="detail">
+  <div class="heading">
+    <h1>Symphony</h1>
+    <p class="type">Web App</p>
+  </div>
+  <div id="description">
+    <img src="0.png" alt="Symphony" class="bleed window" style="margin-right: -300px; width: 700px">
+    <p>Discovering new music should be easy.</p>
+    <p>Tell <strong>Symphony</strong> about a musician you like and it'll suggest others. I worked on Symphony for the 24-hour <a href="http://developer.yahoo.com/hacku/" target="_blank">Yahoo! Hack U</a> 2009 hackathon. Symphony was both my first ever web app project, and it ignited my interest in web development. It was also a solo project, so it presented many challenges and lessons.</p>
+    <h2>Technology</h2>
+    <p>Symphony uses the <a href="http://www.last.fm" target="_blank">last.fm</a> API to gather data about related artists. Working on Symphony was my first time using JavaScript and jQuery, and I learned the basics on the spot for the hackathon.</p>
+    <h2>Design</h2>
+    <p>Symphony presents musicians in a tiled photo view. Clicking on a tile opens more detailed information about the musician in a modal windows. This information includes a biography and larger image. I also originally intended to display information like YouTube videos and Flickr photos but ran out of time.</p>
+    <h2>Roles</h2>
+    <div id="roles">
+      <div class="role design">Ideation &amp; vision</div>
+      <div class="role design">Visual design</div>
+      <div class="role design">Interaction design</div>
+      <div class="role programming">Front-end development</div>
+      <div class="role programming">Back-end development</div>
     </div>
-    <!-- End main site content -->
-
-  <footer>
-      <div id="heading">
-        <h1>About Me</h1>
-      </div>
-      <div id="info">
-        <img src="/photo.jpg" alt="Chris Lee">
-        <div id="description">
-          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
-          <p>I'm currently interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
-        </div>
-      </div>
-      <div id="links">
-        <ul>
-          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </ul></li>
-        </ul>
-      </div>
-      <div id="verse">
-        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
-      </div>
-    </footer>
-
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-19583432-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-   </script>
-  </body>
-</html>
+  </div>
+</div>
