Simplify page title variable

--- a/work/hcii/index.html
+++ b/work/hcii/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Chris Lee | Human-Computer Interaction Institute
+title: Human-Computer Interaction Institute
 ---
 
 <div id="detail">
