--- a/index.html
+++ b/index.html
@@ -1,199 +1,35 @@
----
-layout: default
----
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Chris Lee</title>
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Karla">
+  <link rel="stylesheet" href="style.css">
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-19583432-1']);
+    _gaq.push(['_trackPageview']);
 
-<!-- Primary Items -->
-<div id="primary">
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons double">
-        <a href="/work/snappy/" class="info"><div class="icon"></div>Info</a>
-        <a href="http://chrsl.net/snappy/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Snappy</h1>
-      <p class="type">Web App</p>
-    </div>
-    <img src="/work/snappy/thumb.png" alt="Snappy" />
+    (function() {
+     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+   })();
+  </script>
+</head>
+<body>
+  <h1>Chris Lee</h1>
+  <p class="location">San Francisco</p>
+  <div class="main">
+    <a href="http://www.hcii.cmu.edu/" class="cmu">Carnegie Mellon HCI 2013</a>
+    <a href="http://chrome.blogspot.com/" class="google">Interaction designer, Google Chrome</a>
+    <a href="http://www.plusbible.com/" class="plusbible">Hacker, +Bible</a>
   </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons double">
-        <a href="/work/gospel/" class="info"><div class="icon"></div>Info</a>
-        <a href="http://chrsl.net/gospel/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>The Gospel</h1>
-      <p class="type">Website</p>
-    </div>
-    <img src="/work/gospel/thumb.png" alt="The Gospel" />
+  <div class="contact">
+    <a href="chris@chrsl.net">Email</a>
+    <a href="http://blog.chrsl.net/">Blog</a>
+    <a href="http://dribbble.com/Cleer">Dribbble</a>
+    <a href="https://twitter.com/cleerview">Twitter</a>
   </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons double">
-        <a href="/work/designforprogrammers/" class="info"><div class="icon"></div>Info</a>
-        <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Design for Programmers</h1>
-      <p class="type">Presentation</p>
-    </div>
-    <img src="/work/designforprogrammers/thumb.png" alt="Design for Programmers" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons double">
-        <a href="/work/coursel/" class="info"><div class="icon"></div>Info</a>
-        <a href="http://coursel.net/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Coursel</h1>
-      <p class="type">Web App</p>
-    </div>
-    <img src="/work/coursel/thumb.png" alt="Coursel" />
-  </div>
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/grapevin/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Grapevin</h1>
-      <p class="type">Web app</p>
-    </div>
-    <img src="/work/grapevin/thumb.png" alt="Grapevin" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons double">
-        <a href="/work/stik/" class="info"><div class="icon"></div>Info</a>
-        <a href="http://www.stik.com/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Stik.com</h1>
-      <p class="type">Web App</p>
-    </div>
-    <img src="/work/stik/thumb.png" alt="Stik" />
-  </div>
-
-</div>
-
-<!-- Secondary Items -->
-<div id="secondary">
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/vote4/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Vote 4</h1>
-      <p class="type">Mobile App</p>
-    </div>
-    <img src="/work/vote4/thumb.png" alt="Vote 4" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/bonsai/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Bonsai</h1>
-      <p class="type">Web App</p>
-    </div>
-    <img src="/work/bonsai/thumb.png" alt="Bonsai" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons double">
-        <a href="/work/acf/" class="info"><div class="icon"></div>Info</a>
-        <a href="http://acfpcc.org/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>ACF</h1>
-      <p class="type">Website</p>
-    </div>
-    <img src="/work/acf/thumb.png" alt="Asian Christian Fellowship" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/tripi/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Tripi</h1>
-      <p class="type">Web App</p>
-    </div>
-    <img src="/work/tripi/thumb.png" alt="Tripi" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/shelf/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Shelf</h1>
-      <p class="type">Web App</p>
-    </div>
-    <img src="/work/shelf/thumb.png" alt="Shelf" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/waypoint/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Waypoint</h1>
-      <p class="type">Device</p>
-    </div>
-    <img src="/work/waypoint/thumb.png" alt="Waypoint" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/hcii/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>HCI Institute</h1>
-      <p class="type">Website</p>
-    </div>
-    <img src="/work/hcii/thumb.png" alt="HCI Institute" />
-  </div>
-
-  <div class="item">
-    <div class="cover">
-      <div class="buttons">
-        <a href="/work/symphony/" class="info"><div class="icon"></div>Info</a>
-      </div>
-    </div>
-    <div class="heading">
-      <h1>Symphony</h1>
-      <p class="type">Web App</p>
-    </div>
-    <img src="/work/symphony/thumb.png" alt="Symphony" />
-  </div>
-</div>
+</body>
+</html>
