--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="http://www.hcii.cmu.edu/" class="cmu">Carnegie Mellon HCI 2013</a>
   </div>
   <div class="contact">
-    <a href="chris@chrsl.net">Email</a>
+    <a href="mailto:chris@chrsl.net">Email</a>
     <a href="http://blog.chrsl.net/">Blog</a>
     <a href="http://dribbble.com/Cleer">Dribbble</a>
     <a href="https://twitter.com/cleerview">Twitter</a>
